--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,13 @@
     padding-left:80px;
     padding-bottom:5px;
 }
+
+.avitar{
+    padding-left:130px;
+    padding-bottom:5px;
+}
+
+.username{
+    padding-left:40px;
+    padding-bottom:5px;
+}
