a few styling adjustments

--- a/css/style.css
+++ b/css/style.css
@@ -39,12 +39,12 @@
     padding-bottom:5px;
 }
 
-.avitar{
-    padding-left:130px;
+.ua{
+    padding-left:125px;
     padding-bottom:5px;
 }
 
-.username{
+.un{
     padding-left:40px;
     padding-bottom:5px;
 }
